博士・台湾など

--- a/css/custom.css
+++ b/css/custom.css
@@ -6,6 +6,18 @@ body {
     background: #f4f5f7;
 }
 
+img:not([class]) {
+	float: left;
+	display: block;
+}
+
+/* h2 */
+h2:not(.list__title.post__title) {
+    padding: 0.5em;
+    color: black;
+    background: #fff5ee;
+    border-left: solid 5px #228B22;
+}
 
 .list__thumbnail {
     float: right;
@@ -221,3 +233,132 @@ transition: visibility 0.15s ease, transform 0.15s ease, -webkit-transform 0.15s
     max-width: 100%;
 }
 }
+
+
+/* box */
+.box1 {
+    position: relative;
+    margin: 2.5em 0 1.5em 0.5em;
+    padding: 0.5em 1em;
+    border: solid 3px #62c1ce;
+}
+.box1 .box-title {
+    position: absolute;
+    display: inline-block;
+    top: -27px;
+    left: -3px;
+    padding: 0 9px;
+    height: 25px;
+    line-height: 25px;
+    font-size: 17px;
+    background: #62c1ce;
+    color: #ffffff;
+    font-weight: bold;
+    border-radius: 5px 5px 0 0;
+}
+.box1 p {
+    margin: 0; 
+    padding: 0;
+}
+
+.box1.caution {
+    border: solid 3px red;
+}
+.box1.caution .box-title {
+    background: red;
+}
+
+/* blockquote */
+blockquote {
+    position: relative;
+    padding: 10px 12px;
+    box-sizing: border-box;
+    font-style: italic;
+    color: #464646;
+    border-left: solid 40px #c4c4c4;
+    background: #f3f3f3;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.19);
+}
+
+blockquote:before{
+    display: inline-block;
+    position: absolute;
+    top: 50%;
+    left: -32px;
+    -ms-transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
+    transform: translateY(-50%);
+    content: "\f10d";
+    font-family: FontAwesome;
+    color: #FFF;
+    font-size: 22px;
+    line-height: 1;
+    font-weight: 900;
+}
+
+blockquote p {
+    position: relative;
+    padding: 0;
+    margin: 10px 0;
+    z-index: 3;
+    line-height: 1.7;
+}
+
+blockquote cite {
+    display: block;
+    text-align: right;
+    color: #888888;
+    font-size: 0.9em;
+}
+/* blockquote {
+    position: relative;
+    padding: 5px 10px 5px 32px;
+    box-sizing: border-box;
+    font-style: italic;
+    background: #f3f3f3;
+    border-left: 5px solid #008b8b;
+    box-shadow: 0 3px 4px rgba(0, 0, 0, 0.15);
+}
+
+blockquote:before{
+    display: inline-block;
+    position: absolute;
+    top: 10px;
+    left: -15px;
+    width: 40px;
+    height: 30px;
+    text-align: center;
+    content: "\f10d";
+    font-family: "FontAwesome";
+    color: #FFF;
+    font-size: 18px;
+    line-height: 30px;
+    background: #92d4ff;
+    box-shadow: 0 2px 2px rgba(26, 26, 26, 0.14);
+    font-weight: 900;
+}
+
+blockquote:after{
+    position: absolute;
+    content: '';
+    top: 40px;
+    left: -15px;
+    border: none;
+    border-bottom: solid 8px transparent;
+    border-right: solid 15px #6eb3e0;
+}
+
+blockquote p {
+    position: relative;
+    padding: 0;
+    margin: 10px 0;
+    z-index: 3;
+    line-height: 1.7;
+}
+
+blockquote cite {
+    display: block;
+    text-align: right;
+    color: #888888;
+    font-size: 0.9em;
+} */
